--- a/CSSBackgrounds.css
+++ b/CSSBackgrounds.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('文艺坊图库/math-theme-03.png'); 
+  background-image: url('诸子百家考工记/math-theme-03.png'); 
   background-repeat: no-repeat; 
   /*background-size: 100%;*/
   background-size: cover; 
